hphp/hack/test/typecheck/attributes/typeconst.php.exp
File "typeconst.php", line 19, characters 5-7:
The Bad attribute cannot be used on a type constant. (Typing[4231])
File "typeconst.php", line 8, characters 7-9:
The attribute's class is defined here. To be available for use on a type constant, the Bad class must implement HH\TypeConstantAttribute.
